--- a/get_state_ethogram_vis_rslds.ipynb
+++ b/get_state_ethogram_vis_rslds.ipynb
@@ -294,6 +294,28 @@
       "np.unique(all_states) [0 1 2 3 4 5 6 7 8]\n",
       "2 (0, 0)\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/8z/xy4sl8b90qnc_x9p_4psrnmh0000gn/T/ipykernel_16934/2185414956.py:62: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`). Consider using `matplotlib.pyplot.close()`.\n",
+      "  fig, axs = plt.subplots(n_axs*n_sections,1, figsize=(18,6*n_sections))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 (0, 1)\n",
+      "2 (0, 2)\n",
+      "2 (1, 0)\n",
+      "2 (1, 1)\n",
+      "2 (1, 2)\n",
+      "2 (2, 0)\n",
+      "2 (2, 1)\n",
+      "2 (2, 2)\n"
+     ]
     }
    ],
    "source": [
