--- a/predict_rev_turn_vs_pure_rev.ipynb
+++ b/predict_rev_turn_vs_pure_rev.ipynb
@@ -1544,11 +1544,232 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6d85dc46",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'y' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 47\u001b[0m\n\u001b[1;32m     45\u001b[0m normalize\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m     46\u001b[0m T \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m\n\u001b[0;32m---> 47\u001b[0m X_all, y_all \u001b[38;5;241m=\u001b[39m prepare_data([velocity, acceleration, worm_curvature, z_norm], \u001b[43my\u001b[49m, T\u001b[38;5;241m=\u001b[39mT, holdout_idxs\u001b[38;5;241m=\u001b[39m[\u001b[38;5;241m20\u001b[39m])\n\u001b[1;32m     48\u001b[0m X_train, X_test, y_train, y_test, input_stats \u001b[38;5;241m=\u001b[39m split_and_normalize(X_all, y_all, normalize\u001b[38;5;241m=\u001b[39mnormalize) \u001b[38;5;66;03m# test here is held-out timepoints of held-in worms\u001b[39;00m\n\u001b[1;32m     51\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mload_and_process_FB_data_fncs_8\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m  causal_moving_average,plot_data,   reformat_data_1, replace_outliers_exp, replace_outliers_neg_post_seperate_and_resample, smooth_trace,replace_outliers_and_resample,resample_binary,   match_cdf \n",
+      "\u001b[0;31mNameError\u001b[0m: name 'y' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from visualize_donut_time_series_and_states import plot_donut_beh_figs_1\n",
+    "import pickle \n",
+    "pickle_fname = \"/Users/friederikebuck/Downloads/worm notes/processed_checkpts/worm_angles_concat_neural.pickle\"\n",
+    "with open(pickle_fname, \"rb\") as handle:\n",
+    "    worm_angles_concat_neural, worm_radii_concat_neural, model_neural_directed = pickle.load(handle) \n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "pickle_fname = \"/Users/friederikebuck/Downloads/worm notes/processed_checkpts/worm_angles_concat_beh.pickle\"\n",
+    "with open(pickle_fname, \"rb\") as handle:\n",
+    "   worm_angles, worm_radii, model_beh_directed =  pickle.load( handle) \n",
+    "    \n",
+    "from sklearn.decomposition import PCA\n",
+    "from load_and_process_FB_data_fncs_8 import load_data, reformat_data, plot_data,  analyze_data, replace_outliers_exp, reformat_data_1\n",
+    "# experiment = \"duty_cycle\"\n",
+    "# condition = \"exp\"\n",
+    "# neuron = \"AVA\"\n",
+    "# path = \"/Users/friederikebuck/beh_analysis_results/csv/_Aim1_AVA_duty_cycle/\"\n",
+    "\n",
+    "\n",
+    "experiment = \"duty_cycle\"\n",
+    "condition = \"exp\"\n",
+    "neuron = \"AIB\"\n",
+    "path = \"/Users/friederikebuck/beh_analysis_results/csv/_AIBC-3_Aim1_AIB_duty_cycle/\"\n",
+    "\n",
+    "\n",
+    "# experiment = \"duty_cycle\"\n",
+    "# condition = \"exp\"\n",
+    "# neuron = \"RIM\"\n",
+    "# path = \"/Users/friederikebuck/beh_analysis_results/csv/_Aim1_RIM_duty_cycle/\"\n",
+    "from compute_donut_utils import fix_signs, compute_phase,compute_radius, extract_rotation_angle, set_seed\n",
+    "from angle.preprocess import prepare_data, split_and_normalize\n",
+    "\n",
+    "\n",
+    "y = np.array(q_x)\n",
+    "pca = PCA(n_components=9, svd_solver=\"full\")\n",
+    "pca.fit(np.concatenate(q_x[:-2])) #leave out two worms to test generalization\n",
+    "pca.components_ = fix_signs(pca.components_)\n",
+    "pca_x = pca.transform(np.concatenate(q_x))\n",
+    "\n",
+    "#instead of training on phase, we'll train on sin and cosine to avoid the jumping between 2pi and 0\n",
+    "thetas = np.array([compute_phase(q_x[i], pca) for i in range(21)])\n",
+    "y_sin = [np.sin(y_i) for y_i in thetas]\n",
+    "y_cos = [np.cos(y_i) for y_i in thetas]\n",
+    "\n",
+    "y = np.zeros((21, 1599, 3))\n",
+    "y[:,:,0] = y_sin\n",
+    "y[:,:,1] = y_cos\n",
+    "y[:,:,2] = [compute_radius(q_x[i], pca) for i in range(21)]\n",
+    "\n",
+    "rotated_data = extract_rotation_angle(pca_x, n_neighbors=5)\n",
+    "\n",
+    "rotated_data2d = rotated_data[:, 1:3]  # Project onto the principal plane\n",
+    "angles = np.arctan2(rotated_data2d[:, 1], rotated_data2d[:, 0])  \n",
+    "\n",
+    "n_worms, timepoints = [21, 1599]\n",
+    "# angles = np.radians((270-np.degrees(angles+ np.pi))%360-180)\n",
+    "\n",
+    "angles = angles.reshape(n_worms, timepoints)\n",
+    "rotated_data2d = rotated_data2d.reshape(n_worms, timepoints, 2)\n",
+    "\n",
+    "y_sin = np.sin(angles)\n",
+    "y_cos = np.cos(angles)\n",
+    "radii = np.sqrt(rotated_data2d[..., 0]**2 + rotated_data2d[..., 1]**2)\n",
+    "\n",
+    "y = np.stack([y_sin, y_cos, radii], axis=-1)\n",
+    "y.shape\n",
+    "z_norm = np.array(z, np.float64)\n",
+    "\n",
+    "z_norm = np.array(z, np.float64)\n",
+    "velocity -= velocity.mean()\n",
+    "velocity /= velocity.std()\n",
+    "acceleration -= acceleration.mean()\n",
+    "acceleration /= acceleration.std()\n",
+    "worm_curvature -= worm_curvature.mean()\n",
+    "worm_curvature /= worm_curvature.std()\n",
+    "z_norm -= z_norm.mean()\n",
+    "z_norm /= z_norm.std()\n",
+    "z_flat = np.array(z).flatten()\n",
+    "set_seed(42)\n",
+    "normalize=False\n",
+    "T = 5\n",
+    "X_all, y_all = prepare_data([velocity, acceleration, worm_curvature, z_norm], y, T=T, holdout_idxs=[20])\n",
+    "X_train, X_test, y_train, y_test, input_stats = split_and_normalize(X_all, y_all, normalize=normalize) # test here is held-out timepoints of held-in worms\n",
+    "\n",
+    "\n",
+    "from load_and_process_FB_data_fncs_8 import  causal_moving_average,plot_data,   reformat_data_1, replace_outliers_exp, replace_outliers_neg_post_seperate_and_resample, smooth_trace,replace_outliers_and_resample,resample_binary,   match_cdf \n",
+    "\n",
+    "\n",
+    "exp_data = load_data(experiment, condition, neuron, path = path)\n",
+    "\n",
+    "\n",
+    "stim_exp_vel, stim_exp_acc, stim_exp_curve, stim_exp_rev, stim_exp_pause, stim_exp_turn, stim_exp_body_angle_mag  = replace_outliers_exp(exp_data, exp_data[0].shape)\n",
+    "\n",
+    "exp_onsets = plot_data(stim_exp_vel, stim_exp_acc, stim_exp_curve, stim_exp_rev, stim_exp_pause, experiment, fps=6)\n",
+    "\n",
+    "stim_resampled_rev, stim_resampled_turn,stim_resampled_features,  stim_smooth_features, stim_matched_features = reformat_data_1(stim_exp_vel, \n",
+    "                                                                                             stim_exp_acc,\n",
+    "                                                                                             stim_exp_curve,\n",
+    "                                                                                             stim_exp_rev,\n",
+    "                                                                                             stim_exp_turn, \n",
+    "                                                                                             stim_exp_pause,\n",
+    "                                                                                             z_flat,\n",
+    "                                                                                             velocity, \n",
+    "                                                                                             acceleration, \n",
+    "                                                                                             worm_curvature,\n",
+    "                                                                                             plot=True, \n",
+    "                                                                                             replace_outliers = True, \n",
+    "                                                                                             sep_pos_neg_resample = True, match_vel_only = True\n",
+    "                                                                                             )\n",
+    "\n",
+    "stim_resampled_vel, stim_resampled_acc, stim_resampled_curve = stim_resampled_features\n",
+    "stim_smooth_vel, stim_smooth_acc, stim_smooth_curve = stim_smooth_features\n",
+    "stim_matched_vel, stim_matched_acc, stim_matched_curve = stim_matched_features\n",
+    "\n",
+    "\n",
+    "onsets = plot_data(stim_matched_vel, stim_matched_acc, stim_matched_curve, stim_resampled_rev, stim_resampled_turn, experiment, fps=1.6, orig = False)\n",
+    "resampled_onsets = onsets\n",
+    "\n",
+    "inferred_phases, final_behaviors, final_behaviors_all, inferred_phases_all, inferred_rad_all, behaviors_all, inferred_rad, initial_behaviors, initial_cts_beh, X_all_LSTM = analyze_data(stim_matched_vel,\n",
+    "                                                                                                                                                                                         stim_matched_acc, \n",
+    "                                                                                                                                                                                         stim_matched_curve, \n",
+    "                                                                                                                                                                                         stim_resampled_rev, \n",
+    "                                                                                                                                                                                         stim_resampled_turn, \n",
+    "                                                                                                                                                                                         onsets, \n",
+    "                                                                                                                                                                                         model_beh_directed,  \n",
+    "                                                                                                                                                                                         z_norm,\n",
+    "                                                                                                                                                                                         input_stats,  \n",
+    "                                                                                                                                                                                         z,   \n",
+    "                                                                                                                                                                                         lag=16, \n",
+    "                                                                                                                                                                                         inclusion_thresh = 2, \n",
+    "                                                                                                                                                                                         model_type=\"ff\", \n",
+    "                                                                                                                                                                                         remove_revs=False\n",
+    "                                                                                                                                                                                         \n",
+    "                                                                                                                                                                                         )\n",
+    "beh_all_org = (behaviors_all * np.array(z).std())+ np.array(z).mean()\n",
+    "# plot_donut_beh_figs_1(inferred_phases_all,inferred_rad_all,  beh_all_org,\n",
+    "\n",
+    "#                          cmap,\n",
+    "#                             n_bins = 10, \n",
+    "#                          window = 5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "7a24cc21",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'stim_exp_rev' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m state_to_label \u001b[38;5;241m=\u001b[39m {\u001b[38;5;241m1\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrev of rev turn \u001b[39m\u001b[38;5;124m\"\u001b[39m, \n\u001b[1;32m      2\u001b[0m                   \u001b[38;5;241m2\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpure rev\u001b[39m\u001b[38;5;124m\"\u001b[39m}\n\u001b[0;32m----> 3\u001b[0m beh_mat \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros_like(\u001b[43mstim_exp_rev\u001b[49m)\n\u001b[1;32m      4\u001b[0m beh_mat[stim_exp_rev\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbool\u001b[39m\u001b[38;5;124m'\u001b[39m)] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m      5\u001b[0m beh_mat[stim_exp_turn\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbool\u001b[39m\u001b[38;5;124m'\u001b[39m)] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'stim_exp_rev' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "print()"
+    "state_to_label = {1: \"rev of rev turn \", \n",
+    "                  2: \"pure rev\"}\n",
+    "beh_mat = np.zeros_like(stim_exp_rev)\n",
+    "beh_mat[stim_exp_rev.astype('bool')] = 1\n",
+    "beh_mat[stim_exp_turn.astype('bool')] = 2\n",
+    "rev_of_rev_turn_bin_mat, pure_rev_bin_mat, reor_mat = get_reor_mats(beh_mat)\n",
+    "reor_state_to_track_start_end_is = get_state_to_track_start_end_is(reor_mat, states = state_to_label.keys())\n",
+    "####\n",
+    "fps = 6\n",
+    "\n",
+    "max_prior_frames = 12#int(10/fps)\n",
+    "filter_for_rev_only = True\n",
+    "\n",
+    "\n",
+    "n_pre_frames = 0\n",
+    "dt = 0.6\n",
+    "fig, ax1 = plt.subplots()\n",
+    "feature_lbl = \"rev bin\"\n",
+    "rev_duration_min_frames = 12\n",
+    "rev_of_rev_turn_to_track_start_end_is = get_state_to_track_start_end_is(rev_of_rev_turn_bin_mat, states = [1])[1]\n",
+    "\n",
+    "# features, feature_labels = np.array(Y), neural_labels\n",
+    "features_list = [stim_exp_vel, stim_exp_acc, stim_exp_curve]\n",
+    "features = np.concatenate([feat[:, :, None] for feat in features_list], axis = 2)\n",
+    "feature_labels = [\"vel\",\"accel\",  \"curve\"]\n",
+    "# predict_rev_turn_aligned_to_rev_start(features,\n",
+    "#                                           reor_mat, \n",
+    "#                                           max_prior_frames,  feature_labels, rev_duration_min = 6,\n",
+    "#                                           test_size = 0.3, \n",
+    "#                                             # n_splits = 5, \n",
+    "#                                             # lstm_lag = 0, \n",
+    "#                                             fps = 1.6\n",
+    "                                          \n",
+    "                                            \n",
+    "#                         )\n",
+    "\n",
+    "\n",
+    "predict_rev_turn_aligned_to_rev_end(features,\n",
+    "                                          reor_mat, \n",
+    "                                          max_prior_frames,  feature_labels, rev_duration_min = 15,\n",
+    "                                          test_size = 0.3, \n",
+    "                                            # n_splits = 5, \n",
+    "                                            # lstm_lag = 0, \n",
+    "                                            fps = 1.6\n",
+    "                                          \n",
+    "                                            \n",
+    "                        )"
    ]
   }
  ],
